# TestWithAI

./: .gitattributes  .gitignore  README.md  check_config.py  fix_ps1_encoding.py  pyproject.toml  requirements.txt  twai.bat  twai.sh
console/: package.json  vite.config.ts
console/src/: App.tsx
console/src/layouts/: Header.tsx  Sidebar.tsx  index.module.less
console/src/pages/Chat/: index.module.less
console/src/styles/: layout.css
deploy/: Dockerfile  entrypoint.sh
deploy/config/: supervisord.conf.template
scripts/: install.ps1  install.sh
src/test_with_ai/: __init__.py  __main__.py  constant.py
src/test_with_ai/agents/: __init__.py  command_handler.py  model_factory.py  prompt.py  react_agent.py  skills_hub.py  skills_manager.py
src/test_with_ai/agents/hooks/: __init__.py  memory_compaction.py
src/test_with_ai/agents/memory/: __init__.py  memory_manager.py
src/test_with_ai/agents/tools/: __init__.py  browser_control.py  graph_rag.py  rerank.py  shell.py
src/test_with_ai/agents/utils/: token_counting.py
src/test_with_ai/app/: _app.py
src/test_with_ai/cli/: app_cmd.py  channels_cmd.py  chats_cmd.py  clean_cmd.py  daemon_cmd.py  desktop_cmd.py  init_cmd.py  main.py  providers_cmd.py  uninstall_cmd.py  utils.py
src/test_with_ai/config/: config.py  utils.py
src/test_with_ai/console/: index.html
src/test_with_ai/envs/: store.py
src/test_with_ai/local_models/: factory.py  manager.py  schema.py
src/test_with_ai/providers/: ollama_manager.py
src/test_with_ai/tunnel/: binary_manager.py
src/test_with_ai/utils/: logging.py
tests/: test_conversation_relay.py  test_mcp_resilience.py  test_memory_compaction_hook.py  test_ollama_manager_timeout.py  test_openai_stream_toolcall_compat.py  test_react_agent_tool_choice.py  test_session.py  test_truncate.py  test_tunnel.py  test_twiml.py  test_voice_config.py
tests/channels/: test_qq_url_sanitize.py
website/src/: config.ts  i18n.ts
website/src/components/: BrandStory.tsx  CatPawIcon.tsx  CopawLogo.tsx  CopawMascot.tsx  Nav.tsx  QuickStart.tsx
website/src/data/: testimonials.ts
(+72 files in other folders)
